--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
-/venv
-/clean_data.csv
+
+.pypirc
+.ruff_cache/
+abstra/
+.pytype/
+.ropeproject
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+data/*
+*.py[codz]
+*$py.class
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
