--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "DVC Exam: Liora"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "dvc>=3.66.1",
+    "dvc[s3]>=3.66.1",
     "dvc-s3>=3.3.0",
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
